# math_logic

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: ctest.yml
src/: CMakeLists.txt
src/lab1/: main.c
src/lab2/: main.rs
src/libs/alg/: CMakeLists.txt  alg.h  algr.rs  lab2.rs
src/libs/alg/lab1/: log_calculator.c  log_calculator.h  log_calculator.rs
src/libs/alg/lab2/: log_calculator.rs
test/: CMakeLists.txt
test/lab1/: add_element.c  check_input_type.c  conjunctive_formula.c  conjunctive_formula_stress.c  disjunctive_formula.c  disjunctive_formula_stress.c  free_formula.c  init_formula.c
