[package]
name = "math_logic"
version = "2.0.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"
bindgen = "0.68.1"

[dependencies]
concat-arrays = "0.1.2"
itertools = "0.11.0"

[lib]
name = "algr"
path = "./src/libs/alg/algr.rs"

[[bin]]
name = "lab2"
path = "./src/lab2/main.rs"