project(tests)

add_executable(lab1_check_input_type_test lab1/check_input_type.c)
target_link_libraries(lab1_check_input_type_test alg)
add_executable(lab1_init_formula lab1/init_formula.c)
target_link_libraries(lab1_init_formula alg)
add_executable(lab1_free_formula lab1/free_formula.c)
target_link_libraries(lab1_free_formula alg)
add_executable(lab1_add_element lab1/add_element.c)
target_link_libraries(lab1_add_element alg)
add_executable(lab1_disjunctive_formula_stress lab1/disjunctive_formula_stress.c)
target_link_libraries(lab1_disjunctive_formula_stress alg)
add_executable(lab1_disjunctive_formula lab1/disjunctive_formula.c)
target_link_libraries(lab1_disjunctive_formula alg)
add_executable(lab1_conjunctive_formula lab1/conjunctive_formula.c)
target_link_libraries(lab1_conjunctive_formula alg)
add_executable(lab1_conjunctive_formula_stress lab1/conjunctive_formula_stress.c)
target_link_libraries(lab1_conjunctive_formula_stress alg)


add_test(NAME lab1CheckInputTypeTest COMMAND lab1_check_input_type_test)
add_test(NAME lab1InitFormula COMMAND lab1_init_formula)
add_test(NAME lab1FreeFormula COMMAND lab1_free_formula)
add_test(NAME lab1AddElement COMMAND lab1_add_element)
add_test(NAME lab1DisjunctiveFormula COMMAND lab1_disjunctive_formula)
add_test(NAME lab1DisjunctiveFormulaStress COMMAND lab1_disjunctive_formula_stress)
add_test(NAME lab1ConjunctiveFormula COMMAND lab1_conjunctive_formula)
add_test(NAME lab1ConjunctiveFormulaStress COMMAND lab1_conjunctive_formula_stress)